<resources>
    <string name="app_name">simbirsoft.maketalents</string>
    <string name="viewmodel_some_error">Some error</string>
    <string name="authorization">Авторизация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="enter_by_social">Использовать соцсети</string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="map">Карта</string>
    <string name="exit">Выход</string>
    <string name="hide_contact_information">Скрыть контактные данные</string>
    <string name="visible_to_all">Видимый для всех</string>
    <string name="change_photo">Сменить фотографию</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="telephone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="not_auth">Ты не авторизован</string>
    <string name="empty">Пусто</string>
    <string name="repeat">Повторить</string>
    <string name="missing">Отсутствует</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_phone_number">Некорректный телефон</string>
    <string name="invalid_name">Некорректное имя</string>
    <string name="stop">Остановить</string>
</resources>
