<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ivan.simbirsoft.maketalents.views.CompositeView
        android:id="@+id/error_state_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout="@layout/layout_error_content_state"
        android:orientation="vertical"
        app:button_text="@string/repeat"
        app:message_text="@string/viewmodel_some_error">

    </ivan.simbirsoft.maketalents.views.CompositeView>

    <TextView
        android:id="@+id/empty_text_view"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/empty" />

</merge>