<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="281dp"
                android:layout_height="185dp"
                android:layout_marginTop="16dp"
                android:scaleType="matrix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/authorization_background" />

            <LinearLayout
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginStart="28dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emil"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp">

                    <!--todo make common style-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/registration"
                        android:textColor="#4c4c4c"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|center_vertical"
                        android:background="?selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/forgot_password"
                        android:textColor="#4c4c4c"
                        android:textSize="13sp" />

                </FrameLayout>

                <Button
                    android:id="@+id/loginButton"
                    style="@style/AuthorizationGreenButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/enter" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/enter_by_social"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_progress_bar_with_darkened_background" />

</FrameLayout>